# golang-utils

./: .gitignore  BUILD.bazel  CODE_OF_CONDUCT.md  LICENSE  README.md  TODO.md  WORKSPACE  build.sh  deps.bzl  go.mod  go.work  go.work.sum
.github/workflows/: go.yaml
aws/secretsmanager/: BUILD.bazel  main.go
github/: BUILD.bazel  client.go  main.go  repo.go
src/: BUILD.bazel  client.go  go.mod  main.go  main_test.go
src/domain/: BUILD.bazel  github_repository.go  github_repository_settings.go
tests/: BUILD.bazel  sample_test.go
