load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "github_lib",
    srcs = [
        "client.go",
        "main.go",
        "repo.go",
    ],
    importpath = "github.com/cbismuth/golang-utils/github",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "github",
    embed = [":github_lib"],
    visibility = ["//visibility:public"],
)
