load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "src_lib",
    srcs = [
        "client.go",
        "main.go",
    ],
    importpath = "github.com/cbismuth/golang-gh-repo-settings-reset/src",
    visibility = ["//visibility:private"],
    deps = ["//src/domain"],
)

go_binary(
    name = "src",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "src_test",
    srcs = ["main_test.go"],
    embed = [":src_lib"],
    deps = ["@com_github_stretchr_testify//suite"],
)
